# MeetStream-AI-x-Scalekit-Hackathon

./: .env  .env.example  .gitignore  INTEGRATION.md  LICENSE  README.md  SCALEKIT_TEAMMATE_BRIEF.md  STATUS.md  auth.py  debug_tools.py  dispatcher.py  extraction.py  main.py  pyproject.toml  sample_transcript.json  send_bot.py  server.py  start.bat  start.sh  test_calendar.py  test_gmail.py  test_hubspot.py  test_slack.py  transcript.py
.claude/: settings.local.json
app/: extractor.py  server.py
backend/: main.py  requirements.txt
bridge/app/meetstream/: ws_handlers.py
connectors/: __init__.py  base.py  gmail_followup.py  google_calendar.py  hubspot.py  slack.py
dashboard/: package-lock.json  tsconfig.json
dashboard/app/: page.tsx
dashboard/hooks/: useMeetingSocket.ts
dashboard/lib/: types.ts
tests/: test_task_endpoints.py
